# HoffmanAlgorithm

./: .gitattributes  .gitignore  BMPImages.cpp  BMPImages.h  CMakeLists.txt  HoffmanTree.cpp  HoffmanTree.h  Node.cpp  Node.h  benchmark.cpp  benchmark.h  input.txt  main.cpp  output.txt  output2.txt  outputMap.txt  writing.cpp  writing.h
nado/: Logs.txt  outputMap.txt
resource/: hui.txt
